--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "client/components-bower"
   ],
   "dependencies": {
-    "angular": "~1.2.21"
+    "angular": "~1.2.21",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.21",
